# model_server

./: BUILD.bazel  Dockerfile.redhat  Dockerfile.ubuntu  Makefile  README.md  WORKSPACE  config_python.json  script.py
ci/: .gitignore  Dockerfile.coverity  testOnCommit.groovy
client/python/kserve-api/samples/: mediapipe_image.py
client/python/ovmsclient/lib/docs/: grpc_client.md
demos/benchmark/python/: README.md
demos/gptj_causal_lm/cpp/: build_and_run.sh  main.cpp  output.txt
demos/gptj_causal_lm/python/: app2.py  app_2_bling.py  app_2_hugging.py  app_bling.py  app_node.py  app_node_tfs.py
demos/horizontal_text_detection/python/: README.md
demos/open_clip/python/: README.md  client.py  client_dag.py  config_dag.json  requirements.txt  tests.txt  tokenize.cpp  tokenize_base.cpp  tokenizer.py
release_files/: Dockerfile.redhat  Dockerfile.ubuntu
src/: BUILD  custom_node_interface.h  inferenceparameter.cpp  inferenceparameter.hpp  inferencerequest.cpp  inferencerequest.hpp  inferenceresponse.cpp  inferenceresponse.hpp  inferencetensor.cpp  inferencetensor.hpp  main.cpp  modelinstance.cpp  modelinstance.hpp  modelmanager.cpp  my_test.cpp  pocapi.hpp  predict_request_validation_utils.cpp  processing_worker.cpp  server.cpp  service_worker.py  shared_mem.cpp  unix_socket.cpp
src/capi_frontend/: capi_utils.cpp  capi_utils.hpp
src/custom_nodes/python_executor/: python_executor.cpp
src/custom_nodes/tokenizer/: CMakeLists.txt  Dockerfile.ubuntu  Makefile  detokenization_tests.cpp  detokenizer.cpp  detokenizer.hpp  tests.cpp  tokenizer.cpp  tokenizer.hpp
src/custom_nodes/tokenizer/src/: CMakeLists.txt  blingfire_model.cpp  blingfire_model.hpp  clip_model.cpp  clip_model.hpp  clip_tokenizer.cpp  detokenizer.cpp  model.cpp  model.hpp  tokenizer.cpp
src/custom_nodes/tokenizer/test/: CMakeLists.txt  clip_tokenization_test.cpp  detokenization_test.cpp  tokenization_test.cpp
src/kfs_frontend/: kfs_utils.cpp
src/mediapipe_calculators/: ovms_calculator.cc
src/mediapipe_internal/: mediapipegraphexecutor.cpp
src/test/: capi_predict_validation_test.cpp  inferencerequest_test.cpp  mediapipeflow_test.cpp  predict_validation_test.cpp  prediction_service_test.cpp  test_utils.cpp  test_utils.hpp
src/test/custom_nodes/: node_python.cpp
src/test/mediapipe/: ovms_image_input_calculator.cc
tests/models/: lower_case.py
